fix filter buttons alignment issue

--- a/scss-compile/scss/_registry_filters.scss
+++ b/scss-compile/scss/_registry_filters.scss
@@ -71,6 +71,9 @@
 
     .filters-col {
       position: relative;
+      display: flex;
+      justify-content: flex-start;
+      text-align: left;
 
       .filter-options {
         position: absolute;
